update app version and values
Signed-off-by: Patrick St-Louis <patrick.st-louis@opsecid.ca>

--- a/services/didwebvh-server-py/sandbox/values.yaml
+++ b/services/didwebvh-server-py/sandbox/values.yaml
@@ -15,7 +15,7 @@ networkPolicy:
 server:
   image:
     repository: ghcr.io/decentralized-identity/didwebvh-server-py
-    tag: 0.3.5
+    tag: 0.4.0
     pullPolicy: Always
   host: "sandbox.bcvh.vonx.io"
   workers: "4"
@@ -26,10 +26,18 @@ server:
     webvh_prerotation: "false"
     webvh_portability: "false"
     webvh_endorsement: "false"
-  # This is a public key for the default sandbox witness.
-  # It belongs to the ditp-demo-issuer Traction Dev tenant.
-  # Once endorser service is setup for webvh, we will update this value
-  known_witness_key: "z6Mkv4HY4FAN618A5nybAaySNyvgVVTbCE2ERA2UWkrHWuvQ"
+    webvh_known_witness_key: ""
+    webvh_known_registry_url: ""
+
+  branding:
+    app_name: "BCVH Sandbox"
+    app_description: "BC Gov community Sandbox WebVH server deployment."
+    app_icon: "https://www2.gov.bc.ca/favicon.ico"
+    app_logo: "https://www2.gov.bc.ca/images/BCID_H_rgb_pos.png"
+    app_primary_color: "#e3a82b"
+    app_secondary_color: "#234075"
+    app_accent_color: "#00bcd4"
+    
   autoscaling:
     enabled: true
     minReplicas: 1
