--- a/services/didwebvh-server-py/charts/dev/values.yaml
+++ b/services/didwebvh-server-py/charts/dev/values.yaml
@@ -57,7 +57,12 @@ didwebvh-server-py:
         enabled: true
         namespaceSelector:
           network.openshift.io/policy-group: ingress
+
   postgresql:
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/postgresql
+      tag: 14.5.0-debian-11-r35
     commonLabels:
       backup: "true"
       env: dev
