--- a/services/didwebvh-server-py/charts/dev/values.yaml
+++ b/services/didwebvh-server-py/charts/dev/values.yaml
@@ -60,8 +60,8 @@ didwebvh-server-py:
 
   postgresql:
     image:
-      registry: docker.io
-      repository: bitnamilegacy/postgresql
+      registry: artifacts.developer.gov.bc.ca
+      repository: docker-remote/bitnamilegacy/postgresql
       tag: 14.5.0-debian-11-r35
     commonLabels:
       backup: "true"
