flip witness to true for dev test prod
Signed-off-by: Patrick St-Louis <patrick.st-louis@opsecid.ca>

--- a/services/didwebvh-server-py/charts/dev/values.yaml
+++ b/services/didwebvh-server-py/charts/dev/values.yaml
@@ -20,7 +20,7 @@ didwebvh-server-py:
     workers: "4"
     policies:
       webvh_version: "1.0"
-      webvh_witness: "false"
+      webvh_witness: "true"
       webvh_watcher: ""
       webvh_prerotation: "false"
       webvh_portability: "false"
