--- a/services/didwebvh-server-py/sandbox/values.yaml
+++ b/services/didwebvh-server-py/sandbox/values.yaml
@@ -59,6 +59,10 @@ server:
       namespaceSelector:
         network.openshift.io/policy-group: ingress
 postgresql:
+  image:
+    registry: artifacts.developer.gov.bc.ca
+    repository: docker-remote/bitnamilegacy/postgresql
+    tag: 14.5.0-debian-11-r35
   commonLabels:
     backup: "false"
     env: sandbox
