--- a/.github/workflows/build_deploy_vc_authn_test.yaml
+++ b/.github/workflows/build_deploy_vc_authn_test.yaml
@@ -51,10 +51,10 @@ jobs:
       - name: Lookup latest chart
         id: chart_version
         run: |
-          helm repo add acapy-vc-authn-oidc https://openwallet-foundation.github.io/acapy-vc-authn-oidc
+          helm repo add openwallet-foundation https://openwallet-foundation.github.io/helm-charts/
           helm repo update
-          echo "APP_VERSION=$(helm search repo acapy-vc-authn-oidc -ojson | jq '.[0].app_version')" >> $GITHUB_OUTPUT
-          echo "CHART_VERSION=$(helm search repo acapy-vc-authn-oidc -ojson | jq '.[0].version')" >> $GITHUB_OUTPUT
+          echo "APP_VERSION=$(helm search repo openwallet-foundation/vc-authn-oidc -ojson | jq -r '.[0].app_version')" >> $GITHUB_OUTPUT
+          echo "CHART_VERSION=$(helm search repo openwallet-foundation/vc-authn-oidc -ojson | jq -r '.[0].version')" >> $GITHUB_OUTPUT
 
       - name: Update test
         env:
