Override dev vc-authn agent name to be consistent with test, prod
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -60,6 +60,7 @@ vc-authn-oidc:
     annotations:
       route.openshift.io/termination: edge
   acapy:
+    nameOverride: agent
     image:
       pullPolicy: IfNotPresent
     walletStorageCredentials:
@@ -108,13 +109,6 @@ vc-authn-oidc:
         genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis"
     networkPolicy:
       enabled: true
-
-    persistence:
-      enabled: true
-      storageClass: "netapp-file-standard"
-      accessModes:
-        - ReadWriteOnce
-      size: 1Gi
 
   mongodb:
     auth:
