Updated vc-authn image tags
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -9,6 +9,7 @@ vc-authn-oidc:
   image:
     registry: ghcr.io
     repository: bcgov/acapy-vc-authn-oidc
+    tag: "2.3.2"
     pullPolicy: IfNotPresent
 
   acapyTenancyMode: single
