--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -5,6 +5,7 @@ vc-authn-oidc:
   image:
     registry: ghcr.io
     repository: bcgov/acapy-vc-authn-oidc
+    tag: "dev"
     pullPolicy: IfNotPresent
 
   acapyTenancyMode: single
