hotfix: update argo trigger action version

--- a/.github/workflows/build_deploy_vc_authn_test.yaml
+++ b/.github/workflows/build_deploy_vc_authn_test.yaml
@@ -96,7 +96,7 @@ jobs:
           workflow_file_name: gitops_sync.yaml
 
       - name: Trigger ArgoCD Sync of e79518-test-vc-authn-oidc
-        uses: OpsVerseIO/argocd-sync@0.2.0
+        uses: OpsVerseIO/argocd-sync@v2
         with:
           address: gitops-shared.apps.silver.devops.gov.bc.ca
           token: ${{ secrets.DITP_GITOPS_ARGO_SECRET}}
