Update vc-authn to version 2.3.3
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -82,6 +82,7 @@ vc-authn-oidc:
       auto-respond-credential-offer: true
       auto-respond-messages: true
       auto-verify-presentation: true
+      preserve-exchange-records: true
       genesis-transactions-list: /tmp/ledgers.yml
       log-level: info
       monitor-ping: true
