--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -9,7 +9,7 @@ vc-authn-oidc:
   image:
     registry: ghcr.io
     repository: bcgov/acapy-vc-authn-oidc
-    tag: "2.3.2"
+    tag: "2.3.3"
     pullPolicy: IfNotPresent
 
   acapyTenancyMode: single
@@ -120,7 +120,7 @@ vc-authn-oidc:
       multitenant-admin: false
       multitenant: false
       public-invites: true
-      preserve-exchange-records: false
+      preserve-exchange-records: true
       read-only-ledger: true
       wallet-name: askar-wallet
       wallet-storage-type: postgres_storage
