--- a/services/vc-authn-oidc/charts/test/values.yaml
+++ b/services/vc-authn-oidc/charts/test/values.yaml
@@ -7,7 +7,7 @@ vc-authn-oidc:
   image:
     registry: ghcr.io
     repository: bcgov/acapy-vc-authn-oidc
-    tag: "2.3.2"
+    tag: "2.3.3"
     pullPolicy: IfNotPresent
 
   acapyTenancyMode: single
@@ -106,6 +106,7 @@ vc-authn-oidc:
       auto-respond-credential-offer: true
       auto-respond-messages: true
       auto-verify-presentation: true
+      preserve-exchange-records: true
       genesis-transactions-list: /tmp/ledgers.yml
       log-level: info
       monitor-ping: true
