image vc-authn dev image is always pulled
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -6,7 +6,7 @@ vc-authn-oidc:
     registry: ghcr.io
     repository: bcgov/acapy-vc-authn-oidc
     tag: "dev"
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
 
   acapyTenancyMode: single
   setNonRevoked: true
