--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -5,7 +5,7 @@ vc-authn-oidc:
   image:
     registry: ghcr.io
     repository: bcgov/acapy-vc-authn-oidc
-    tag: "dev"
+    tag: "2.3.4"
     pullPolicy: Always
 
   acapyTenancyMode: single
