--- a/.github/workflows/build_deploy_vc_authn.yaml
+++ b/.github/workflows/build_deploy_vc_authn.yaml
@@ -48,17 +48,16 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
 
-      - name: Lookup latest chart
+      - name: Lookup latest chart version
         id: chart_version
         run: |
           helm repo add openwallet-foundation https://openwallet-foundation.github.io/helm-charts/
           helm repo update
-          echo "APP_VERSION=$(helm search repo openwallet-foundation/vc-authn-oidc -ojson | jq -r '.[0].app_version')" >> $GITHUB_OUTPUT
           echo "CHART_VERSION=$(helm search repo openwallet-foundation/vc-authn-oidc -ojson | jq -r '.[0].version')" >> $GITHUB_OUTPUT
 
       - name: Update dev
         env:
-          APP_VERSION: ${{ steps.chart_version.outputs.APP_VERSION }}
+          APP_VERSION: ${{ needs.build_image.outputs.image_version }}
           CHART_VERSION: ${{ steps.chart_version.outputs.CHART_VERSION }}
           IMAGE_TAG: ${{ needs.build_image.outputs.image_version }}
         run: |
@@ -69,7 +68,7 @@ jobs:
 
       - name: Update test
         env:
-          APP_VERSION: ${{ steps.chart_version.outputs.APP_VERSION }}
+          APP_VERSION: ${{ needs.build_image.outputs.image_version }}
           CHART_VERSION: ${{ steps.chart_version.outputs.CHART_VERSION }}
           IMAGE_TAG: ${{ needs.build_image.outputs.image_version }}
         run: |
@@ -80,7 +79,7 @@ jobs:
 
       - name: Update prod
         env:
-          APP_VERSION: ${{ steps.chart_version.outputs.APP_VERSION }}
+          APP_VERSION: ${{ needs.build_image.outputs.image_version }}
           CHART_VERSION: ${{ steps.chart_version.outputs.CHART_VERSION }}
           IMAGE_TAG: ${{ needs.build_image.outputs.image_version }}
         run: |
