--- a/services/vc-authn-oidc/charts/dev/Chart.yaml
+++ b/services/vc-authn-oidc/charts/dev/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: "2.3.4"
 dependencies:
   - name: vc-authn-oidc
     version: 0.4.5
-    repository: https://openwallet-foundation.github.io/acapy-vc-authn-oidc
+    repository: https://openwallet-foundation.github.io/helm-charts/
