chore: Add existingSecret for PostgreSQL authentication
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -112,6 +112,10 @@ vc-authn-oidc:
     networkPolicy:
       enabled: true
 
+    postgresql:
+      auth:
+        existingSecret: "vc-authn-oidc-postgresql"
+
   mongodb:
     auth:
       existingSecret: "vc-authn-oidc-mongodb"
