--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -109,6 +109,13 @@ vc-authn-oidc:
       - id: CANdyProd
         is_production: true
         genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis"
+
+    secrets:
+      api:
+        existingSecret: "vc-authn-oidc-agent-api"
+      seed:
+        existingSecret: "vc-authn-oidc-agent-seed"
+
     networkPolicy:
       enabled: true
 
