replace bitnami redis chart with groundhog2k redis chart
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/redis/charts/redis/Chart.yaml
+++ b/services/redis/charts/redis/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 name: redis
 type: application
-version: 20.12.2
-appVersion: 7.4.2
+version: 2.2.1
+appVersion: 8.4.0
 dependencies:
   - name: redis
-    version: 20.12.2
-    repository: https://charts.bitnami.com/bitnami/
+    version: 2.2.1
+    repository: https://groundhog2k.github.io/helm-charts/
