add webvh server to traction settings
Signed-off-by: Patrick St-Louis <patrick.st-louis@opsecid.ca>

--- a/services/traction/sandbox/values.yaml
+++ b/services/traction/sandbox/values.yaml
@@ -50,6 +50,9 @@ acapy:
           expiry_minutes: 2880
           auto_approve: true
           auto_issuer: true
+      webvh:
+        server_url: https://sandbox.bcvh.vonx.io
+        witness_id: did:key:z6Mktqm2pXW48BZzSNnDzaA3yxo3zhfCUzAktVzFmzZHbVNn
 
   secrets:
     api:
