--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -113,6 +113,10 @@ vc-authn-oidc:
     postgresql:
       auth:
         existingSecret: "vc-authn-oidc-postgresql"
+  cleanup:
+    cronjob:
+      enabled: true
+      schedule: "0 * * * *"
   mongodb:
     auth:
       existingSecret: "vc-authn-oidc-mongodb"
