--- a/services/didwebvh-endorser-service/charts/dev/values.yaml
+++ b/services/didwebvh-endorser-service/charts/dev/values.yaml
@@ -1,25 +1,43 @@
 global:
   ingressSuffix: -dev.apps.silver.devops.gov.bc.ca
 
-acapy:
-  agentUrl: "https://didwebvh-endorser-service-acapy-dev.apps.silver.devops.gov.bc.ca"
-  adminUrl: "https://didwebvh-endorser-service-acapy-admin-dev.apps.silver.devops.gov.bc.ca"
+endorser-service:
+  api:
+    acapyAdminUrl: https://endorser-agent-webvh-admin-dev.apps.silver.devops.gov.bc.ca
+    publicName: "BC Endorser Service (dev)"
+    publicDesc: "An endorser service for BC issuer agents"
+    adminUser: endorser-admin
+    logLevel: info
+    autoAcceptConnections: true
+    autoAcceptAuthors: true
+    autoEndorseRequests: true
+    autoEndorseTxnTypes: ""
 
-proxy:
-   ingress:
-    hosts:
-      - host: didwebvh-endorser-service-acapy-dev.apps.silver.devops.gov.bc.ca
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            servicePort: agent
-      - host: didwebvh-endorser-service-acapy-admin-dev.apps.silver.devops.gov.bc.ca
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            servicePort: admin
-      - host: didwebvh-endorser-service-dev.apps.silver.devops.gov.bc.ca
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            servicePort: endorser
+  acapy:
+    agentUrl: "https://endorser-agent-webvh-dev.apps.silver.devops.gov.bc.ca"
+    adminUrl: "https://endorser-agent-webvh-admin-dev.apps.silver.devops.gov.bc.ca"
+    plugin-config.yml:
+      webvh:
+        server_url: "https://dev.bcvh.vonx.io"
+
+  proxy:
+    ingress:
+      hosts:
+        - host: endorser-agent-webvh-dev.apps.silver.devops.gov.bc.ca
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
+              servicePort: agent
+        - host: endorser-agent-webvh-admin-dev.apps.silver.devops.gov.bc.ca
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
+              servicePort: admin
+        - host: endorser-api-webvh-dev.apps.silver.devops.gov.bc.ca
+          paths:
+            - path: /
+              pathType: ImplementationSpecific
+              servicePort: endorser
+            - path: /
+              pathType: ImplementationSpecific
+              servicePort: endorser
