disable auto accept
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/didwebvh-endorser-service/charts/dev/values.yaml
+++ b/services/didwebvh-endorser-service/charts/dev/values.yaml
@@ -8,9 +8,9 @@ endorser-service:
     publicDesc: "An endorser service for BC issuer agents"
     adminUser: endorser-admin
     logLevel: info
-    autoAcceptConnections: true
-    autoAcceptAuthors: true
-    autoEndorseRequests: true
+    autoAcceptConnections: false
+    autoAcceptAuthors: false
+    autoEndorseRequests: false
     autoEndorseTxnTypes: ""
 
   acapy:
