--- a/services/didwebvh-endorser-service/charts/prod/values.yaml
+++ b/services/didwebvh-endorser-service/charts/prod/values.yaml
@@ -4,13 +4,13 @@ global:
 endorser-service:
   api:
     acapyAdminUrl: https://endorser-agent-webvh-admin.apps.silver.devops.gov.bc.ca
-    publicName: "BC Endorser Service"
+    publicName: "BC Endorser Service (prod)"
     publicDesc: "An endorser service for BC issuer agents"
     adminUser: endorser-admin
     logLevel: info
-    autoAcceptConnections: true
-    autoAcceptAuthors: true
-    autoEndorseRequests: true
+    autoAcceptConnections: false
+    autoAcceptAuthors: false
+    autoEndorseRequests: false
     autoEndorseTxnTypes: ""
 
   acapy:
